# mentat

./: .gitignore  CMakeLists.txt  README.md  mentat.ui  mentatui.h.in
include/: mentat_app.h  state.h
src/: buttons.c  buttons.h  main.c  mentat_app.c  state.c
